contactまでの変更

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
     </section>
 
     <!-- campaign -->
-    <!-- <section class="campain top-campaign">
+    <section class="campain top-campaign">
       <div class="campaign__inner inner">
         <div class="campaign__title section-header">
           <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
@@ -261,8 +261,6 @@
       <div class="campaign__btn">
         <a href="#" class="common-btn">View&nbsp;more</a>
       </div>
-    </section> -->
-
     </section>
 
     <!-- about-->
@@ -337,8 +335,8 @@
                   <h3 class="blog-card__title">ライセンス取得</h3>
                 </div>
                 <div class="blog-card__body">
-                  <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
+                  <div class="blog-card__text">ここにテキストが入ります。ここにテキ<br>ストが入ります。ここにテキストが入り<br>ます。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキ<br>ストが入ります。ここにテキスト</div>
                 </div>
               </a>
               <a href="#" class="card-content__item blog-card">
@@ -350,8 +348,8 @@
                   <h3 class="blog-card__title">ウミガメと泳ぐ</h3>
                 </div>
                 <div class="blog-card__body">
-                  <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
+                  <div class="blog-card__text">ここにテキストが入ります。ここにテキ<br>ストが入ります。ここにテキストが入り<br>ます。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキ<br>ストが入ります。ここにテキスト</div>
                 </div>
               </a>
               <a href="#" class="card-content__item blog-card">
@@ -363,8 +361,8 @@
                   <h3 class="blog-card__title">カクレクマノミ</h3>
                 </div>
                 <div class="blog-card__body">
-                  <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
+                  <div class="blog-card__text">ここにテキストが入ります。ここにテキ<br>ストが入ります。ここにテキストが入り<br>ます。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキ<br>ストが入ります。ここにテキスト</div>
                 </div>
               </a>
             </div>
@@ -535,7 +533,7 @@
              <div class="contact__content">
                <div class="contact__title section-header">
                  <h2 class="section-header__maintitle section-header__maintitle--contact"><span>C</span>ontact</h2>
-                 <div class="section-header__subtitle">お問い合わせ</div>
+                 <div class="section-header__subtitle section-header__subtitle--contact">お問い合わせ</div>
                  <p class="contact__text">ご予約・お問い合わせはコチラ</p>
                </div>
                <div class="contact__btn">
